--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,12 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/annotations": "^2.0",
-    "doctrine/dbal": "^3",
-    "doctrine/doctrine-bundle": "^2.12",
-    "doctrine/doctrine-migrations-bundle": "^3.3",
-    "doctrine/orm": "^2.8",
+    "doctrine/doctrine-bundle": "^2.10",
+    "doctrine/doctrine-migrations-bundle": "^3.2",
+    "doctrine/orm": "^2.16",
     "phpdocumentor/reflection-docblock": "^5.3",
-    "phpstan/phpdoc-parser": "^1.26",
-    "sensio/framework-extra-bundle": "^6.2",
+    "phpstan/phpdoc-parser": "^1.24",
     "symfony/asset": "5.4.*",
-    "symfony/asset-mapper": "6.3.*",
     "symfony/console": "5.4.*",
     "symfony/doctrine-messenger": "5.4.*",
     "symfony/dotenv": "5.4.*",
@@ -36,16 +33,19 @@
     "symfony/runtime": "5.4.*",
     "symfony/security-bundle": "5.4.*",
     "symfony/serializer": "5.4.*",
-    "symfony/stimulus-bundle": "^2.16",
     "symfony/string": "5.4.*",
     "symfony/translation": "5.4.*",
     "symfony/twig-bundle": "5.4.*",
-    "symfony/ux-turbo": "^2.16",
     "symfony/validator": "5.4.*",
     "symfony/web-link": "5.4.*",
     "symfony/yaml": "5.4.*",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "doctrine/dbal": "^3",
+    "sensio/framework-extra-bundle": "^6.2",
+    "symfony/asset-mapper": "6.3.*",
+    "symfony/stimulus-bundle": "^2.16",
+    "symfony/ux-turbo": "^2.16"
   },
   "config": {
     "allow-plugins": {
