--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
+    "sensio/framework-extra-bundle": "^6.2",
     "symfony/asset": "5.4.*",
     "symfony/asset-mapper": "6.3.*",
     "symfony/console": "5.4.*",
