--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=5e8be86f0cd782dbe64c5c0fcbb88a3d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://rakcha:rakchaRootPass@mysql-rakcha.alwaysdata.net:3306/rakcha_db"
+DATABASE_URL="mysql://root@127.0.0.1:3306/rakcha"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
