--- a/.env
+++ b/.env
@@ -48,4 +48,12 @@ MAILER_DSN=gmail://ammari.ali.0001@gmail.com:cakngdtblhocjivh@default
 ###> hwi/oauth-bundle ###
 MICROSOFT_LIVE_ID=377311a4-cc95-4310-9050-4ee51210df1c
 MICROSOFT_LIVE_SECRET=l-O8Q~dqfZEjPicl8Sxb8GEAqedp6q7WqgWcMb5i
+GOOGLE_ID=271068931836-oropltte4qvi15oldtlhqisckrtiukdd.apps.googleusercontent.com
+GOOGLE_SECRET=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
+GITHUB_ID=
+GITHUB_SECRET=
+LINKEDIN_ID=
+LINKEDIN_SECRET=
+FACEBOOK_ID=
+FACEBOOK_SECRET=
 ###< hwi/oauth-bundle ###
