--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,15 @@
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
-    "hwi/oauth-bundle": "^2.2",
     "knplabs/knp-paginator-bundle": "^5.9",
+    "knpuniversity/oauth2-client-bundle": "^2.18",
+    "league/oauth2-google": "^4.0",
     "php-flasher/flasher-noty-symfony": "^1.15",
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
     "sensio/framework-extra-bundle": "^6.2",
+    "stevenmaguire/oauth2-microsoft": "*",
     "symfony/asset": "5.4.*",
     "symfony/console": "5.4.*",
     "symfony/doctrine-messenger": "5.4.*",
