sign in with microsoft (change bundle) + 2fa TOTP + code qr + login throttling + resend mail feature 😄👌👌✌️

--- a/.env
+++ b/.env
@@ -57,3 +57,9 @@ LINKEDIN_SECRET=
 FACEBOOK_ID=
 FACEBOOK_SECRET=
 ###< hwi/oauth-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
