--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
+    "scheb/2fa-bundle": "^5.13",
+    "scheb/2fa-qr-code": "^5.12.1",
+    "scheb/2fa-totp": "^5.13",
     "sensio/framework-extra-bundle": "^6.2",
     "stevenmaguire/oauth2-microsoft": "*",
     "symfony/asset": "5.4.*",
@@ -41,6 +44,7 @@
     "symfony/process": "5.4.*",
     "symfony/property-access": "5.4.*",
     "symfony/property-info": "5.4.*",
+    "symfony/rate-limiter": "5.4.*",
     "symfony/runtime": "5.4.*",
     "symfony/security-bundle": "5.4.*",
     "symfony/serializer": "5.4.*",
