--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,8 +22,10 @@ security:
             security: false
         main:
             lazy: true
-
-
+            login_throttling: true
+            two_factor:
+                auth_form_path: 2fa_login
+                check_path: 2fa_login_check
             provider: app_user_provider
             entry_point: form_login
             form_login:
@@ -35,6 +37,7 @@ security:
             custom_authenticator:
                 - App\Security\LoginFormAuthenticator
                 - App\Security\GoogleAuthenticator
+                - App\Security\MicrosoftAuthenticator
             logout: true
             remember_me:
                 secret: '%kernel.secret%'
@@ -50,8 +53,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
         - { path: ^/connect, roles: PUBLIC_ACCESS }
-        - { path: ^/users/profile, roles: ROLE_USER }
+        - { path: ^/logout, role: PUBLIC_ACCESS }
+        - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
+        - { path: ^/users/*, roles: ROLE_USER }
         - { path: ^/users, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
