--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/annotations": "^2.0",
@@ -13,6 +13,8 @@
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
     "easycorp/easyadmin-bundle": "^4.9",
+    "google/apiclient": "*",
+    "madcoda/php-youtube-api": "^1.2",
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
