--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
+
+    APP_IMAGE_DIRECTORY: 'C:\Users\elbootic.com\OneDrive\Bureau\rakcha-web\public\img\cinemas'
+
 services:
     # default configuration for services in *this* file
     _defaults:
