qrcode + imdb bundels

--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,16 @@
     "php": ">=8.1",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "bacon/bacon-qr-code": "^3.0",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
+    "endroid/qr-code": "^5.0",
+    "endroid/qr-code-bundle": "^5.0",
     "google/apiclient": "*",
+    "imdbphp/imdbphp": "^8.2",
     "kartik-v/bootstrap-star-rating": "@dev",
     "madcoda/php-youtube-api": "^1.2",
     "php-flasher/flasher-symfony": "^1.15",
@@ -20,7 +24,7 @@
     "phpstan/phpdoc-parser": "^1.24",
     "sensio/framework-extra-bundle": "*",
     "symfony/asset": "5.4.*",
-    "symfony/asset-mapper": "6.3.*",
+    "symfony/asset-mapper": "*",
     "symfony/console": "5.4.*",
     "symfony/doctrine-messenger": "5.4.*",
     "symfony/dotenv": "5.4.*",
@@ -56,7 +60,8 @@
       "composer/package-versions-deprecated": true,
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true
+      "symfony/runtime": true,
+      "endroid/installer": true
     },
     "optimize-autoloader": true,
     "preferred-install": {
