--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,16 @@
     "php": ">=8.0",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "davmixcool/php-sentiment-analyzer": "^1.2",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
     "easycorp/easyadmin-bundle": "^4.9",
+    "friendsofsymfony/ckeditor-bundle": "^2.5",
+    "knplabs/knp-disqus-bundle": "^4.1",
+    "php-ai/php-ml": "^0.10.0",
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
