--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
     "easycorp/easyadmin-bundle": "^4.9",
+    "league/omnipay": "^3.2",
+    "omnipay/paypal": "^3.0",
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
