--- a/config/packages/scheb_2fa.yaml
+++ b/config/packages/scheb_2fa.yaml
@@ -5,8 +5,8 @@ scheb_two_factor:
         # If you're using guard-based authentication, you have to use this one:
         # - Symfony\Component\Security\Guard\Token\PostAuthenticationGuardToken
         # If you're using authenticator-based security (introduced in Symfony 5.1), you have to use this one:
-        # - Symfony\Component\Security\Http\Authenticator\Token\PostAuthenticationToken
+        - Symfony\Component\Security\Http\Authenticator\Token\PostAuthenticationToken
     totp:
         enabled: true
         issuer: 'Rakcha'
-        template: security/2fa_form.html.twig
+        template: back/twofa.html.twig
