--- a/composer.json
+++ b/composer.json
@@ -7,24 +7,24 @@
     "php": ">=8.1",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "bacon/bacon-qr-code": "^2.0",
     "davmixcool/php-sentiment-analyzer": "^1.2",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
-    "endroid/qr-code": "^3.9",
-    "endroid/qr-code-bundle": "^3.4",
+    "endroid/qr-code": "^5.0",
+    "endroid/qr-code-bundle": "^5.0",
     "imdbphp/imdbphp": "^8.2",
     "kartik-v/bootstrap-star-rating": "@dev",
     "knplabs/knp-paginator-bundle": "^5.9",
     "knpuniversity/oauth2-client-bundle": "^2.18",
     "league/oauth2-google": "^4.0",
+    "league/omnipay": "^3.2",
     "liip/imagine-bundle": "^2.1",
     "madcoda/php-youtube-api": "^1.2",
-    "meilisearch/search-bundle": "^0.15.0",
     "nyholm/psr7": "^1.8",
+    "omnipay/paypal": "^3.0",
     "oneup/flysystem-bundle": "^3",
     "php-ai/php-ml": "^0.10.0",
     "php-flasher/flasher-noty-symfony": "^1.15",
@@ -32,7 +32,6 @@
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
     "scheb/2fa-bundle": "*",
-    "scheb/2fa-qr-code": "*",
     "scheb/2fa-totp": "*",
     "scheb/2fa-trusted-device": "*",
     "sensio/framework-extra-bundle": "*",
