--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
   # https://symfony.com/doc/current/security/authenticator_manager.html
   enable_authenticator_manager: true
   hide_user_not_found: false
-  access_denied_url: /error
+  access_denied_url: /
   role_hierarchy:
     ROLE_ADMIN: ["ROLE_USER", "ROLE_ALLOWED_TO_SWITCH"]
     ROLE_CLIENT: ["ROLE_USER"]
@@ -55,13 +55,14 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/login, roles: PUBLIC_ACCESS }
-    - { path: ^/error, roles: PUBLIC_ACCESS }
     - { path: ^/register, roles: PUBLIC_ACCESS }
     - { path: ^/connect, roles: PUBLIC_ACCESS }
     - { path: ^/logout, role: PUBLIC_ACCESS }
     - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
     - { path: ^/users/profile, roles: ROLE_USER }
     - { path: ^/users, roles: ROLE_ADMIN }
+    - { path: ^/cinema/listecinema, roles: ROLE_USER }
+    - { path: ^/cinema, roles: ROLE_RESPONSABLE_DE_CINEMA }
     - { path: ^/, roles: PUBLIC_ACCESS }
     # - { path: ^/profile, roles: ROLE_USER }
 
