--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,14 @@
   "version": 2,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.5.3"
+      "runtime": "vercel-php@0.5.4"
     }
   },
   "routes": [
+    {
+      "src": "/(assets)/(.*)$",
+      "dest": "/api/assets.php?path=$2"
+    },
     {
       "src": "/(.*)",
       "dest": "/api/index.php"
