Update package.json to align dependencies and devDependencies with latest versions

--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-    "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@hotwired/stimulus": "^3.0.0",
-        "@hotwired/turbo": "^7.1.1 || ^8.0",
-        "@splidejs/splide": "^4.1.4",
-        "@swup/debug-plugin": "^3.0",
-        "@swup/fade-theme": "^1.0",
-        "@swup/forms-plugin": "^2.0",
-        "@swup/slide-theme": "^1.0",
-        "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
-        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
-        "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
-        "@symfony/ux-swup": "file:vendor/symfony/ux-swup/assets",
-        "@symfony/ux-toggle-password": "file:vendor/symfony/ux-toggle-password/assets",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
-        "@symfony/webpack-encore": "^5.0.0",
-        "animate.css": "^4.1.1",
-        "aos": "^2.3.4",
-        "chart.js": "^3.4.1 || ^4.0",
-        "core-js": "^3.38.0",
-        "gsap": "^3.13.0",
-        "lottie-web": "^5.13.0",
-        "parallax-js": "^3.1.0",
-        "particles.js": "^2.0.0",
-        "regenerator-runtime": "^0.13.9",
-        "rellax": "^1.12.1",
-        "scrollmagic": "^2.0.8",
-        "smooth-scrollbar": "^8.8.4",
-        "swup": "^3.0",
-        "three.js": "^0.77.1",
-        "typed.js": "^2.1.0",
-        "vanilla-tilt": "^1.8.1",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^5.1.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "@studio-freight/lenis": "^1.0.42",
-        "lenis": "^1.3.4",
-        "locomotive-scroll": "^4.1.4",
-        "swiper": "^11.2.8",
-        "three": "^0.177.0"
-    }
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.0",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/turbo": "^7.1.1 || ^8.0",
+    "@splidejs/splide": "^4.1.4",
+    "@swup/debug-plugin": "^3.0",
+    "@swup/fade-theme": "^1.0",
+    "@swup/forms-plugin": "^2.0",
+    "@swup/slide-theme": "^1.0",
+    "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
+    "@symfony/webpack-encore": "^5.0.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "chart.js": "^3.4.1 || ^4.0",
+    "core-js": "^3.38.0",
+    "gsap": "^3.13.0",
+    "lottie-web": "^5.13.0",
+    "parallax-js": "^3.1.0",
+    "particles.js": "^2.0.0",
+    "regenerator-runtime": "^0.13.9",
+    "rellax": "^1.12.1",
+    "scrollmagic": "^2.0.8",
+    "smooth-scrollbar": "^8.8.4",
+    "swup": "^3.0",
+    "three.js": "^0.77.1",
+    "typed.js": "^2.1.0",
+    "vanilla-tilt": "^1.8.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.1.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  },
+  "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
+    "@symfony/ux-chartjs": "^2.27.0",
+    "@symfony/ux-live-component": "^2.27.0",
+    "@symfony/ux-swup": "^2.27.0",
+    "@symfony/ux-toggle-password": "^2.27.0",
+    "@symfony/ux-turbo": "^2.27.0",
+    "lenis": "^1.3.4",
+    "locomotive-scroll": "^4.1.4",
+    "swiper": "^11.2.8",
+    "three": "^0.177.0"
+  }
 }
