--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
-    "@symfony/ux-chartjs": "^2.27.0",
-    "@symfony/ux-live-component": "^2.27.0",
-    "@symfony/ux-swup": "^2.27.0",
-    "@symfony/ux-toggle-password": "^2.27.0",
-    "@symfony/ux-turbo": "^2.27.0",
+    "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
+    "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
+    "@symfony/ux-swup": "file:vendor/symfony/ux-swup/assets",
+    "@symfony/ux-toggle-password": "file:vendor/symfony/ux-toggle-password/assets",
+    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
     "lenis": "^1.3.4",
     "locomotive-scroll": "^4.1.4",
     "swiper": "^11.2.8",
