--- a/composer.json
+++ b/composer.json
@@ -118,6 +118,11 @@
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
+    "build": [
+      "@php -v",
+      "npm -v",
+      "ls -R"
+    ],
     "post-install-cmd": [
       "@auto-scripts"
     ],
