--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "ext-gd": "*",
     "ext-iconv": "*",
     "davmixcool/php-sentiment-analyzer": "^1.2",
+    "dg/composer-cleaner": "*",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
     "doctrine/doctrine-bundle": "^2.10",
@@ -87,10 +88,11 @@
   "config": {
     "allow-plugins": {
       "composer/package-versions-deprecated": true,
+      "dg/composer-cleaner": true,
+      "endroid/installer": true,
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true,
-      "endroid/installer": true
+      "symfony/runtime": true
     },
     "optimize-autoloader": true,
     "preferred-install": {
