--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "ext-gd": "*",
     "ext-iconv": "*",
     "davmixcool/php-sentiment-analyzer": "^1.2",
-    "dg/composer-cleaner": "*",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
     "doctrine/doctrine-bundle": "^2.10",
@@ -115,7 +114,7 @@
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
-    "build": [
+    "vercel": [
       "@php -v",
       "npm -v",
       "ls -R"
@@ -132,9 +131,9 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": true,
       "require": "6.4.*",
-      "docker": false
+      "docker": true,
+      "allow-contrib": true
     }
   },
   "require-dev": {
@@ -143,7 +142,7 @@
     "symfony/browser-kit": "6.4.*",
     "symfony/css-selector": "6.4.*",
     "symfony/debug-bundle": "6.4.*",
-    "symfony/maker-bundle": "^1.0",
+    "symfony/maker-bundle": "^1.63",
     "symfony/phpunit-bridge": "^7.0",
     "symfony/stopwatch": "6.4.*",
     "symfony/var-dumper": "6.4.*",
