--- a/composer.json
+++ b/composer.json
@@ -137,16 +137,12 @@
     }
   },
   "require-dev": {
-    "doctrine/doctrine-fixtures-bundle": "^3.5",
-    "phpunit/phpunit": "^9.5",
     "symfony/browser-kit": "6.4.*",
     "symfony/css-selector": "6.4.*",
     "symfony/debug-bundle": "6.4.*",
     "symfony/maker-bundle": "^1.63",
-    "symfony/phpunit-bridge": "^7.0",
     "symfony/stopwatch": "6.4.*",
     "symfony/var-dumper": "6.4.*",
-    "symfony/web-profiler-bundle": "6.4.*",
-    "zenstruck/foundry": "^1.37"
+    "symfony/web-profiler-bundle": "6.4.*"
   }
 }
