Add initial application build files and entry points
- Created JavaScript build file for application logic (app.88a694bf.js) with Stimulus controller.
- Added CSS build file for styling (app.b75294ae.css) with a light gray background.
- Updated entrypoints.json to include new JavaScript and CSS files.
- Created manifest.json to map built files for easy reference.
- Added runtime JavaScript file for module loading (runtime.8ab7f0c8.js).
- Implemented index.php to bootstrap the application with the Kernel.

--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,7 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-###> symfony/webpack-encore-bundle ###
-/node_modules/
-/public/build/
-npm-debug.log
-yarn-error.log
-###< symfony/webpack-encore-bundle ###
-
 ###> liip/imagine-bundle ###
 /public/media/cache/
 ###< liip/imagine-bundle ###
+node_modules
