Add Symfony Lock component and update related configurations
- Introduced the Symfony Lock component in composer.json and composer.lock.
- Updated the Panier entity to rename the index for clarity.
- Modified the rakcha_db.sql to change the index name for the `panier` table.
- Added environment variables to the .env file for database and messenger configurations.
- Updated .gitignore to exclude database files.
- Removed unused migration files and their corresponding .gitignore entry.

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "symfony/google-mailer": "6.4.*",
     "symfony/http-client": "6.4.*",
     "symfony/intl": "6.4.*",
+    "symfony/lock": "6.4.*",
     "symfony/mailer": "6.4.*",
     "symfony/mime": "6.4.*",
     "symfony/monolog-bundle": "^3.0",
@@ -110,6 +111,11 @@
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
+    "vercel": [
+      "@php bin/console doctrine:database:drop --force",
+      "@php bin/console doctrine:database:create",
+      "@php bin/console doctrine:schema:update --force --complete"
+    ],
     "post-install-cmd": [
       "@auto-scripts"
     ],
