Update Vercel commands to use PHP executable directly

--- a/composer.json
+++ b/composer.json
@@ -112,9 +112,9 @@
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
     "vercel": [
-      "@php bin/console doctrine:database:drop --force",
-      "@php bin/console doctrine:database:create",
-      "@php bin/console doctrine:schema:update --force --complete"
+      "php ./bin/console doctrine:database:drop --force",
+      "php ./bin/console doctrine:database:create",
+      "php ./bin/console doctrine:schema:update --force --complete"
     ],
     "post-install-cmd": [
       "@auto-scripts"
