--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "symfony/asset": "6.4.*",
     "symfony/console": "6.4.*",
     "symfony/doctrine-messenger": "6.4.*",
+    "symfony/dom-crawler": "6.4.*",
     "symfony/dotenv": "6.4.*",
     "symfony/expression-language": "6.4.*",
     "symfony/flex": "^2.4",
