Refactor index.php for improved error handling; disable mysqli and pdo_mysql extensions in php.ini; add Vercel command to composer.json

--- a/composer.json
+++ b/composer.json
@@ -111,6 +111,9 @@
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
+    "vercel": [
+      "@php --ini"
+    ],
     "post-install-cmd": [
       "@auto-scripts"
     ],
