Update php.ini to correct extension directory and adjust extensions for improved compatibility

--- a/api/php.ini
+++ b/api/php.ini
@@ -1,7 +1,8 @@
 ; [Extensions]
 
 ; Where to find extensions
-extension_dir=/opt/now/modules
+extension_dir=/var/task/php/modules
+
 ; Priority 10
 zend_extension=opcache
 
@@ -20,7 +21,6 @@ extension=gettext
 extension=iconv
 extension=imap
 extension=intl
-extension=json
 extension=mbstring
 extension=mysqlnd
 extension=pdo
@@ -35,21 +35,34 @@ extension=tokenizer
 extension=xml
 extension=xmlwriter
 extension=xsl
+extension=zip
 
 ; Priority 30
+extension=igbinary
+extension=msgpack
 extension=mysqli
 extension=pdo_mysql
 extension=pdo_pgsql
 extension=pdo_sqlite
 extension=xmlreader
 extension=xmlrpc
+; extension=psr
+extension=brotli
+extension=grpc
+; extension=lua
+; extension=protobuf
+extension=runkit7
+; extension=timecop
+extension=uuid
+extension=mongodb
+extension=geoip
 
 ; Priority 40
 extension=apcu
 extension=ds
-extension=phalcon
-extension=ssh2
-extension=swoole
+; extension=phalcon
+; extension=swoole
+extension=redis
 
 ; [Common]
 display_errors=1
@@ -58,6 +71,8 @@ variables_order="EGPCS"
 disable_functions=""
 sys_temp_dir="/tmp"
 upload_tmp_dir="/tmp"
+post_max_size=6M
+upload_max_filesize=6M
 
 ; [Opcache]
 opcache.enable=1
