Add QrCodeExtension for generating QR codes in Twig templates
- Implemented QrCodeExtension class extending Twig\AbstractExtension.
- Added a Twig function 'qr_code_result' to generate QR codes.
- Utilized BaconQrCode library to create SVG QR codes.
- Included base64 encoding for inline SVG usage in HTML.
- Handled empty data input by providing a default message.

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "php": ">=8.1",
     "ext-ctype": "*",
     "ext-curl": "*",
-    "ext-gd": "*",
     "ext-iconv": "*",
+    "bacon/bacon-qr-code": "*",
     "davmixcool/php-sentiment-analyzer": "^1.2",
     "doctrine/annotations": "^2.0",
     "doctrine/dbal": "^3",
@@ -16,8 +16,6 @@
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
     "embed/embed": "^4.4",
-    "endroid/qr-code": "^5.0",
-    "endroid/qr-code-bundle": "^5.0",
     "guzzlehttp/guzzle": "^7.8",
     "intervention/image": "^2.7",
     "kartik-v/bootstrap-star-rating": "@dev",
